--- a/dockerized/dockerfile
+++ b/dockerized/dockerfile
@@ -1,9 +1,9 @@
 From python:3.10
 
-WORKDIR /app
+WORKDIR /
 COPY . .
 
 RUN pip install -r requirements.txt
 
 ENTRYPOINT ["python"]
-CMD ["app.py", host="0.0.0.0"]
+CMD ["app.py"]
